# chainbridge-substrate

./: Cargo.toml
chainbridge/: Cargo.toml
chainbridge/src/: lib.rs
example-erc721/: Cargo.toml
example-pallet/: Cargo.toml
example-pallet/src/: lib.rs
primitives/src/: assets.rs
