[package]
name = 'chainbridge'
version = '0.0.2'
authors = ['david@chainsafe.io']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }

# frame dependencies
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }

pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/Polkadex.git", branch = 'develop', default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner" }
[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"polkadex-primitives/std",
]
